# minigame-rs

./: .env.sample  Cargo.toml
src/: access_token.rs  client.rs  error.rs  lib.rs
